; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_quicly.c_setup_initial_key.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_quicly.c_setup_initial_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_quicly_cipher_context_t = type { i32, i32 }
%struct.TYPE_5__ = type { %struct.TYPE_6__*, i32 }
%struct.TYPE_6__ = type { i32 }

@PTLS_MAX_DIGEST_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.st_quicly_cipher_context_t*, %struct.TYPE_5__*, i8*, i8*, i32)* @setup_initial_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_initial_key(%struct.st_quicly_cipher_context_t* %0, %struct.TYPE_5__* %1, i8* %2, i8* %3, i32 %4) #0 {
  %6 = alloca %struct.st_quicly_cipher_context_t*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store %struct.st_quicly_cipher_context_t* %0, %struct.st_quicly_cipher_context_t** %6, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %14 = load i32, i32* @PTLS_MAX_DIGEST_SIZE, align 4
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %11, align 8
  %17 = alloca i32, i64 %15, align 16
  store i64 %15, i64* %12, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i8*, i8** %8, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @ptls_iovec_init(i8* %26, i32 %31)
  %33 = load i8*, i8** %9, align 8
  %34 = call i32 @ptls_iovec_init(i8* null, i32 0)
  %35 = call i32 @ptls_hkdf_expand_label(%struct.TYPE_6__* %20, i32* %17, i32 %25, i32 %32, i8* %33, i32 %34, i32* null)
  store i32 %35, i32* %13, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %5
  br label %54

38:                                               ; preds = %5
  %39 = load %struct.st_quicly_cipher_context_t*, %struct.st_quicly_cipher_context_t** %6, align 8
  %40 = getelementptr inbounds %struct.st_quicly_cipher_context_t, %struct.st_quicly_cipher_context_t* %39, i32 0, i32 1
  %41 = load %struct.st_quicly_cipher_context_t*, %struct.st_quicly_cipher_context_t** %6, align 8
  %42 = getelementptr inbounds %struct.st_quicly_cipher_context_t, %struct.st_quicly_cipher_context_t* %41, i32 0, i32 0
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 8
  %46 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %47 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %46, i32 0, i32 0
  %48 = load %struct.TYPE_6__*, %struct.TYPE_6__** %47, align 8
  %49 = load i32, i32* %10, align 4
  %50 = call i32 @setup_cipher(i32* %40, i32* %42, i32 %45, %struct.TYPE_6__* %48, i32 %49, i32* %17)
  store i32 %50, i32* %13, align 4
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %53

52:                                               ; preds = %38
  br label %54

53:                                               ; preds = %38
  br label %54

54:                                               ; preds = %53, %52, %37
  %55 = mul nuw i64 4, %15
  %56 = trunc i64 %55 to i32
  %57 = call i32 @ptls_clear_memory(i32* %17, i32 %56)
  %58 = load i32, i32* %13, align 4
  %59 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %59)
  ret i32 %58
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @ptls_hkdf_expand_label(%struct.TYPE_6__*, i32*, i32, i32, i8*, i32, i32*) #2

declare dso_local i32 @ptls_iovec_init(i8*, i32) #2

declare dso_local i32 @setup_cipher(i32*, i32*, i32, %struct.TYPE_6__*, i32, i32*) #2

declare dso_local i32 @ptls_clear_memory(i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
